--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -7,7 +7,7 @@
     .header-position
       position: fixed
       top: 30px
-      left: 0
+      right: 0
       bottom: 30px
       width: 135px
       display: flex
@@ -65,10 +65,10 @@
         transition: all 0.3s ease-in-out
 
       span:before
-        top: 15px
+        top: 13px
 
       span::after
-        top: -17px
+        top: -15px
 
       &.is-open span
         background: transparent
@@ -96,7 +96,7 @@
     ul
       list-style: none
       margin: 0
-      padding: 0
+      padding-top: 40px
 
     li
       text-align: center
