--- a/assets/css/4-layouts/_blogpost.sass
+++ b/assets/css/4-layouts/_blogpost.sass
@@ -1,7 +1,7 @@
 .bloglayout
   flex: 1
   display: flex
-  flex-direction: row
+  flex-direction: row-reverse
   justify-content: center
   color: $text-color
 
