--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -470,7 +470,7 @@ body {
   .home-container header .header-position {
     position: fixed;
     top: 30px;
-    left: 0;
+    right: 0;
     bottom: 30px;
     width: 135px;
     display: -webkit-box;
@@ -533,9 +533,9 @@ body {
       -webkit-transition: all 0.3s ease-in-out;
               transition: all 0.3s ease-in-out; }
     .home-container header .mobile-nav-toggle span:before {
-      top: 15px; }
+      top: 13px; }
     .home-container header .mobile-nav-toggle span::after {
-      top: -17px; }
+      top: -15px; }
     .home-container header .mobile-nav-toggle.is-open span {
       background: transparent; }
     .home-container header .mobile-nav-toggle.is-open span:before,
@@ -562,7 +562,7 @@ body {
   .home-container .mobile-nav ul {
     list-style: none;
     margin: 0;
-    padding: 0; }
+    padding-top: 40px; }
   .home-container .mobile-nav li {
     text-align: center;
     margin-bottom: 10px; }
@@ -789,9 +789,9 @@ section.projects {
         -ms-flex-line-pack: center;
             align-content: center; }
     section.projects .projects-strip .col {
-      height: 100px;
+      height: 125px;
       margin: 12px 12px;
-      width: 100px;
+      width: 125px;
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
       -webkit-transition: all 0.15s ease-in-out;
               transition: all 0.15s ease-in-out; }
@@ -811,8 +811,8 @@ section.projects {
         background-position: center;
         background-size: contain; }
       section.projects .projects-strip .col:hover {
-        -webkit-transform: scale(1.3);
-                transform: scale(1.3);
+        -webkit-transform: scale(1.4);
+                transform: scale(1.4);
         box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4);
         cursor: pointer; }
   section.projects .col-1 {
@@ -882,6 +882,11 @@ section.contact {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   min-height: 100vh; }
   @media (max-width: 830px) {
     .home-container {
@@ -963,10 +968,10 @@ section.contact {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
