--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -2,6 +2,7 @@
   display: flex
   flex-direction: row-reverse
   min-height: 100vh
+  background: pink
 
   @media (max-width: 830px)
     display: block
