--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,7 +202,8 @@ figure {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -294,7 +295,8 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -319,7 +321,8 @@ textarea {
  */
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -434,7 +437,8 @@ img::selection {
 html,
 body {
   min-height: 100vh;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 body {
   background: white;
@@ -447,15 +451,17 @@ body {
   font-size: 28px;
   display: block;
   background: white;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   padding: 0.4em 0;
   line-height: 1.25;
   -webkit-transition: all 0.15s ease-in-out;
-          transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
   width: 300px; }
   .home-cta:hover {
-    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4); }
+    -webkit-box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4); }
 
 @media (max-width: 640px) {
   .home-lead,
@@ -465,7 +471,7 @@ body {
 
 .home-container header {
   width: 135px;
-  background: white;
+  background: honeydew;
   padding: 30px 0; }
   .home-container header .header-position {
     position: fixed;
@@ -474,13 +480,16 @@ body {
     bottom: 30px;
     width: 135px;
     display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
     -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between; }
   .home-container header .logo {
@@ -499,9 +508,11 @@ body {
     list-style: none;
     margin: 20px 0;
     padding: 0 20px 0 0;
-    text-align: right; }
+    text-align: right;
+    background: lightgrey; }
     .home-container header .site-nav ul li {
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      background: yellow; }
       .home-container header .site-nav ul li:last-child {
         margin-bottom: 0; }
   .home-container header .email-link {
@@ -514,7 +525,9 @@ body {
     height: 40px;
     margin-right: 20px;
     -webkit-box-align: center;
+    -webkit-align-items: center;
         -ms-flex-align: center;
+                -ms-grid-row-align: center;
             align-items: center;
     cursor: pointer; }
     .home-container header .mobile-nav-toggle span,
@@ -527,7 +540,7 @@ body {
       background: #333;
       position: relative;
       -webkit-transition: all 0.3s ease-in-out;
-              transition: all 0.3s ease-in-out; }
+      transition: all 0.3s ease-in-out; }
     .home-container header .mobile-nav-toggle span:before {
       top: 13px; }
     .home-container header .mobile-nav-toggle span::after {
@@ -537,12 +550,15 @@ body {
     .home-container header .mobile-nav-toggle.is-open span:before,
     .home-container header .mobile-nav-toggle.is-open span::after {
       -webkit-transform-origin: center;
+          -ms-transform-origin: center;
               transform-origin: center;
       -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
               transform: rotate(45deg);
       top: 0; }
     .home-container header .mobile-nav-toggle.is-open span::after {
       -webkit-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
               transform: rotate(-45deg); }
 
 .home-container .mobile-nav {
@@ -552,9 +568,10 @@ body {
   background: white;
   padding: 30px 0 20px;
   -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: all 0.3s ease-in-out;
-          transition: all 0.3s ease-in-out; }
+  transition: all 0.3s ease-in-out; }
   .home-container .mobile-nav ul {
     list-style: none;
     margin: 0;
@@ -575,10 +592,13 @@ body {
       left: auto;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
           -ms-flex-direction: row;
               flex-direction: row;
       -webkit-box-align: center;
+      -webkit-align-items: center;
           -ms-flex-align: center;
+                  -ms-grid-row-align: center;
               align-items: center; }
     .home-container header .site-nav,
     .home-container header .email-link {
@@ -588,309 +608,60 @@ body {
       margin-left: -25px; }
     .home-container header .mobile-nav-toggle {
       display: -webkit-box;
+      display: -webkit-flex;
       display: -ms-flexbox;
       display: flex; }
   .home-container .mobile-nav.is-open {
     display: block;
     -webkit-transform: translateY(0%);
+        -ms-transform: translateY(0%);
             transform: translateY(0%); } }
-
-section.about {
-  background: #CDB380; }
-  section.about h2 {
-    color: #033648;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 1;
-    margin-left: -88px;
-    margin-top: 0; }
-  section.about .home-lead {
-    padding-bottom: 80px; }
-
-@media (max-width: 640px) {
-  section.about h2 {
-    margin-left: auto;
-    margin-right: auto; } }
-
-section.blog {
-  background: #033649;
-  color: white; }
-  section.blog .description {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  section.blog .home-lead {
-    color: white; }
-  section.blog .home-cta {
-    color: #033649;
-    width: 300px;
-    background: white; }
-  section.blog .post-wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-preferred-size: 90px;
-        flex-basis: 90px;
-    margin-top: -50px;
-    margin-bottom: -50px; }
-  section.blog .post-thumb {
-    display: block;
-    background-size: cover;
-    background-position: center;
-    width: 25%;
-    position: relative;
-    overflow: hidden;
-    opacity: 0;
-    -webkit-transform: translateX(-20px);
-            transform: translateX(-20px);
-    -webkit-transition: all 300ms ease-in-out;
-            transition: all 300ms ease-in-out; }
-    section.blog .post-thumb.is-visible {
-      opacity: 1;
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px); }
-    section.blog .post-thumb.is-emph {
-      -webkit-animation-name: jello;
-              animation-name: jello;
-      -webkit-transform-origin: center;
-              transform-origin: center;
-      -webkit-animation-duration: 1s;
-              animation-duration: 1s;
-      -webkit-animation-fill-mode: both;
-              animation-fill-mode: both;
-      z-index: 1; }
-    section.blog .post-thumb:after {
-      content: '';
-      display: block;
-      padding-top: 100%; }
-    section.blog .post-thumb .post-meta {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(3, 54, 73, 0.7);
-      color: white;
-      padding: 10px;
-      -webkit-transform: translate(0%, 100%) scale(0.5);
-              transform: translate(0%, 100%) scale(0.5);
-      -webkit-transition: all 200ms ease-in-out;
-              transition: all 200ms ease-in-out;
-      opacity: 0; }
-      section.blog .post-thumb .post-meta .name,
-      section.blog .post-thumb .post-meta .date,
-      section.blog .post-thumb .post-meta .excerpt {
-        font-size: .8em;
-        line-height: 1.2; }
-      section.blog .post-thumb .post-meta .date,
-      section.blog .post-thumb .post-meta .excerpt {
-        font-style: italic; }
-  section.blog .post-thumb:hover .post-meta {
-    opacity: 1;
-    -webkit-transform: translate(0%, 0%) scale(1);
-            transform: translate(0%, 0%) scale(1); }
-  @media (max-width: 640px) {
-    section.blog .desc-wrap {
-      margin-top: 100px;
-      margin-left: auto;
-      margin-right: auto; } }
-  @media (max-width: 999px) and (min-width: 720px) {
-    section.blog .post-thumb {
-      width: 33.3%; } }
-
-@-webkit-keyframes jello {
-  from, 11.1%, to {
-    -webkit-transform: none;
-            transform: none; }
-  22.2% {
-    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
-            transform: skewX(-12.5deg) skewY(-12.5deg); }
-  33.3% {
-    -webkit-transform: skewX(6.25deg) skewY(6.25deg);
-            transform: skewX(6.25deg) skewY(6.25deg); }
-  44.4% {
-    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
-            transform: skewX(-3.125deg) skewY(-3.125deg); }
-  55.5% {
-    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
-            transform: skewX(1.5625deg) skewY(1.5625deg); }
-  66.6% {
-    -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
-            transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% {
-    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
-            transform: skewX(0.39062deg) skewY(0.39062deg); }
-  88.8% {
-    -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
-            transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
-
-@keyframes jello {
-  from, 11.1%, to {
-    -webkit-transform: none;
-            transform: none; }
-  22.2% {
-    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
-            transform: skewX(-12.5deg) skewY(-12.5deg); }
-  33.3% {
-    -webkit-transform: skewX(6.25deg) skewY(6.25deg);
-            transform: skewX(6.25deg) skewY(6.25deg); }
-  44.4% {
-    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
-            transform: skewX(-3.125deg) skewY(-3.125deg); }
-  55.5% {
-    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
-            transform: skewX(1.5625deg) skewY(1.5625deg); }
-  66.6% {
-    -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
-            transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% {
-    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
-            transform: skewX(0.39062deg) skewY(0.39062deg); }
-  88.8% {
-    -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
-            transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
-
-section.projects {
-  background: #036564;
-  color: white; }
-  section.projects .home-cta {
-    color: #036564; }
-  section.projects .projects-strip {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-line-pack: center;
-        align-content: center; }
-    section.projects .projects-strip .col {
-      height: 125px;
-      margin: 12px 12px;
-      width: 125px;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-      -webkit-transition: all 0.15s ease-in-out;
-              transition: all 0.15s ease-in-out; }
-      section.projects .projects-strip .col:first-child {
-        background-image: url(/assets/img/img-quote.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain; }
-      section.projects .projects-strip .col:nth-child(2) {
-        background-image: url(/assets/img/img-fc04-tribute.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain; }
-      section.projects .projects-strip .col:nth-child(3) {
-        background-image: url(/assets/img/img-fccprofile.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain; }
-      section.projects .projects-strip .col:hover {
-        -webkit-transform: scale(1.4);
-                transform: scale(1.4);
-        box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4);
-        cursor: pointer; }
-  section.projects .col-1 {
-    position: relative;
-    height: 300px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    section.projects .col-1 p {
-      margin-top: -20px;
-      color: white; }
-
-@media (max-width: 640px) {
-  .home-lead,
-  .home-cta {
-    margin-left: auto;
-    margin-right: auto; } }
-
-@media (max-width: 895px) {
-  section.projects .home-cta {
-    max-width: 300px; }
-  section.projects .col-1 {
-    height: 200px; }
-  section.projects .projects-strip .col {
-    height: 75px;
-    width: 75px; } }
-
-section.contact {
-  background: #CDB380; }
-  section.contact h3 {
-    color: #FF0040; }
-    section.contact h3:hover {
-      color: #cc0033; }
-  section.contact .col-2 {
-    height: 200px;
-    -ms-flex-item-align: center;
-        align-self: center;
-    text-align: center;
-    margin-top: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-  section.contact .contact-link,
-  section.contact .tweet-button {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    -ms-flex-item-align: center;
-        align-self: center;
-    text-decoration: none; }
 
 .home-container {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
-  min-height: 100vh; }
+  min-height: 100vh;
+  background: pink; }
   @media (max-width: 830px) {
     .home-container {
       display: block; } }
 
 .home-sections {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1; }
   .home-sections section {
     padding: 50px 0; }
   .home-sections .flex {
     display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row; }
   .home-sections .flex--center {
     -webkit-box-pack: center;
+    -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center; }
   .home-sections .flex--space-around {
-    -ms-flex-pack: distribute;
-        justify-content: space-around; }
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
   .home-sections .order-first {
     -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
         -ms-flex-order: -1;
             order: -1; }
 
@@ -927,65 +698,3 @@ section.contact {
     @media (max-width: 640px) {
       .home-lead.outdented {
         text-indent: 0; } }
-
-.bloglayout {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #033648; }
-  .bloglayout h1 {
-    color: #033648; }
-  .bloglayout .banner {
-    font-size: 1em; }
-  .bloglayout .meta {
-    font-size: .8em;
-    line-height: 1;
-    font-style: italic; }
-  .bloglayout .post-content {
-    width: 70%;
-    margin-right: auto;
-    margin-left: 10px;
-    line-height: 1.4; }
-  .bloglayout .sidebar {
-    margin: 40px 20px 0 10px;
-    padding-left: 20px;
-    border: 1px solid rgba(100, 100, 100, 0.5);
-    border-radius: 5px;
-    height: 80vh; }
-  .bloglayout .blog-title {
-    font-size: 1.2em;
-    margin-top: 25px;
-    margin-left: 5px; }
-  .bloglayout .postlist {
-    list-style: none;
-    font-size: .8em;
-    padding: 0; }
-    .bloglayout .postlist li {
-      margin: 0 15px; }
-
-@media (max-width: 700px) {
-  .bloglayout {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse; }
-    .bloglayout .post-content {
-      width: 90%;
-      margin: auto; }
-    .bloglayout .sidebar {
-      height: auto;
-      margin-top: 10px; }
-    .bloglayout .postlist {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; } }
